# rs-username-checker

./: Cargo.toml  README.md
src/: main.rs
